# rust-ssite

./: .gitignore  Cargo.toml  README.md
src/: consts.rs  error.rs  main.rs  prelude.rs
src/_tests/: _test_infra.rs  test_site_config.rs  test_site_mod.rs  tests_processor.rs  tests_site_config.rs  tests_site_mod.rs  tests_utils.rs
src/cmd/: app.rs  mod.rs
src/publish/: mod.rs  s3_cred.rs  s3_utils.rs
src/site/: config.rs  mod.rs
src/utils/: mod.rs  toml.rs  x_string.rs
src/xts/: x_string.rs
tests/: site_a.rs  utils.rs
tests-data/site-a/: some-content.md  ssite.toml
tests-data/site-a/content/: full.html  hello.md  hello2.html  index.html
tests-data/site-a/content/sub-dir/: content.html  content_frame.html  full-other-content.html  index.html
tests-data/site-a/content/sub-frame/: content-1.html  content-2.md  content-2_frame.md  full-content.html
